--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -125,7 +125,7 @@
 
 \newcommand{\queryof}[1]{\mathsf{Query}_{#1}}
 
-\newcommand{\relinvs}[2]{\mathsf{RelInvs}[ #1, #2 ]}
+\newcommand{\relinvs}[2]{\mathsf{ExpsInvs}[ #1, #2 ]}
 
 \newcommand{\relpreds}{\mathsf{Preds}}
 
@@ -138,6 +138,8 @@
 \newcommand{\rulepreds}[1]{\mathsf{preds}[ #1 ]}
 
 \newcommand{\rulesucc}[1]{\mathsf{succ}[ #1 ]}
+
+\newcommand{\seqrange}[2]{#1 : #2}
 
 \newcommand{\sinkof}[1]{\mathsf{sink}[ #1 ]}
 
