draft: before adding support for higher-order expressions

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -657,7 +657,7 @@ empty derivation context of $d_1$: $( [ \epsilon ], [ \epsilon ])$.
 \verifyders runs the CHC solver \solvechc on $\mathcal{S}$.
 %
 If \solvechc returns that $\mathcal{S}$ has no solution, then
-\verifyders returns $\nonequiv$, to denote that $D_0 \not\equiv D_1$.
+\verifyders returns $\nonequiv$, to denote that $d_0 \not\equiv d_1$.
 %
 Otherwise, if \solvechc returns some $\sigma \in \solutions{
   \mathcal{S} }$, then \verifyders returns $I \in
